# Yosuga

./: .gitignore  CMakeLists.txt  README.md  main.cpp
other/Resources/Live2DModels/KITU15/: KITU15.cdi3.json  KITU15.model3.json  KITU15.physics3.json  KITU15.vtube.json  items_pinned_to_model.json
src/AudioHandle/: readme.md
src/AudioHandle/Inc/: AudioInput.h  AudioOutput.h
src/AudioHandle/Src/: AudioInput.cpp  AudioOutput.cpp
src/Core/Inc/: AppContext.h  GLCore.h
src/Core/Src/: GLCore.cpp
src/Menu/: readme.md
src/Menu/Inc/: menu.h
src/Menu/Src/: menu.cpp
src/NetWorkHandle/Inc/: networkmanager.h  socketmanager.h  websocketmanager.h
src/NetWorkHandle/Src/: networkmanager.cpp  socketmanager.cpp  websocketmanager.cpp
src/Render/TextRender/Inc/: TextRenderer.h
src/Render/TextRender/Src/: TextRenderer.cpp
src/Setting/: readme.md
src/Setting/Inc/: AudioPage.h  BasePage.h  HomePage.h  ModelPage.h  NetworkPage.h  RenderPage.h  Setting.h  UISetting.h
src/Setting/Src/: AudioPage.cpp  BasePage.cpp  HomePage.cpp  ModelPage.cpp  NetworkPage.cpp  RenderPage.cpp  Setting.cpp  UISetting.cpp
